Fix horizontal gap

--- a/static/_sass/_overrides.scss
+++ b/static/_sass/_overrides.scss
@@ -322,6 +322,7 @@ header.section > .container {
 
 .logo-mix , .logo-mix > svg {
   height:7rem;
+  max-width: 7rem;
 }
 
 .progress {
