--- a/static/_sass/main.scss
+++ b/static/_sass/main.scss
@@ -55,3 +55,7 @@ $navbar-item-color:#b5b5b5;
     width:100%;
     padding:2rem 1.5rem 2rem;
 }
+
+.representations-wrapper > .column {
+    margin-bottom:6rem;
+}
